--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,23 +9,23 @@ services:
       - 3000:3000
     environment:
       REDMINE_DB_MYSQL: db
-      REDMINE_DB_PASSWORD: Write Password
+      REDMINE_DB_PASSWORD: ${REDMINE_DB_PASSWORD}
       REDMINE_DB_DATABASE: redmine
       REDMINE_DB_ENCODING: utf8
     volumes:
-      - /redmine/data:/usr/src/redmine/files
-      - /redmine/plugins:/usr/src/redmine/plugins
-      - /redmine/themes:/usr/src/redmine/public/themes
+      - ${REDMINE_DATA_DIR_PATH}:/usr/src/redmine/files
+      - ${REDMINE_PLUGINS_DIR_PATH}:/usr/src/redmine/plugins
+      - ${REDMINE_THEMES_DIR_PATH}:/usr/src/redmine/public/themes
 
   db:
     container_name: mariadb
     image: mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: Write Password
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: redmine
     volumes:
-      - /mariadb/data/storage/path:/var/lib/mysql
+      - ${MARIADB_STORAGE_DIR_PATH}:/var/lib/mysql
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
