--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-REDMINE_DATA_DIR_PATH=
-REDMINE_PLUGINS_DIR_PATH=
-REDMINE_THEMES_DIR_PATH=
+# 레드마인에 파일 업로드 했을 때 저장될 Host OS의 디렉터리(절대 경로로 지정)
+REDMINE_DATA_DIR_PATH=/home/docker-redmine/redmine/data
+# 레드마인에 플러그인들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
+REDMINE_PLUGINS_DIR_PATH=/home/docker-redmine/redmine/plugins
+# 레드마인에 테마들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
+REDMINE_THEMES_DIR_PATH=/home/docker-redmine/redmine/themes
 
-MARIADB_STORAGE_DIR_PATH=
-REDMINE_DB_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+# 레드마인 서비스의 정보를 담을 mariaDB의 데이터들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
+MARIADB_STORAGE_DIR_PATH=/home/docker-redmine/mariadb/storage
+# mariaDB의 레드마인 서비스 계정의 패스워드
+REDMINE_DB_PASSWORD=redmine1324
+# mariaDB의 root 계정의 패스워드
+MYSQL_ROOT_PASSWORD=root1324
