.env: 디렉터리 경로 상대경로로 변경, docker-compose.yml: db config 파일 디렉터리 및 log 파일 디렉터리 로컬 볼륨과 연결

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-# 레드마인에 파일 업로드 했을 때 저장될 Host OS의 디렉터리(절대 경로로 지정)
-REDMINE_FILES_DIR_PATH=/home/docker-redmine/redmine/files
-# 레드마인에 플러그인들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
-REDMINE_PLUGINS_DIR_PATH=/home/docker-redmine/redmine/plugins
-# 레드마인에 테마들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
-REDMINE_THEMES_DIR_PATH=/home/docker-redmine/redmine/themes
+# 레드마인에 파일 업로드 했을 때 저장될 Host OS의 디렉터리
+REDMINE_FILES_DIR_PATH=~/docker-redmine/redmine/files
+# 레드마인에 플러그인들이 저장될 Host OS의 디렉터리
+REDMINE_PLUGINS_DIR_PATH=~/docker-redmine/redmine/plugins
+# 레드마인에 테마들이 저장될 Host OS의 디렉터리
+REDMINE_THEMES_DIR_PATH=~/docker-redmine/redmine/themes
 
 # 레드마인 서비스의 정보를 담을 mariaDB의 데이터들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
-MARIADB_STORAGE_DIR_PATH=/home/docker-redmine/mariadb/storage
-# mariaDB의 레드마인 서비스 계정의 패스워드
-REDMINE_DB_PASSWORD=redmine1324
+MARIADB_STORAGE_DIR_PATH=~/docker-redmine/mariadb/data
+MARIADB_CONFD_DIR_PATH=~/docker-redmine/mariadb/conf.d
+MARIADB_LOG_DIR_PATH=~/docker-redmine/mariadb/log
 # mariaDB의 root 계정의 패스워드
 MYSQL_ROOT_PASSWORD=root1324
