Redmine에서 사용하는 MariaDB 계정을 root -> redmine 으로 변경

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ MARIADB_CONFD_DIR_PATH=~/docker-redmine/mariadb/conf.d
 MARIADB_LOG_DIR_PATH=~/docker-redmine/mariadb/log
 # mariaDB의 root 계정의 패스워드
 MYSQL_ROOT_PASSWORD=root1324
+MYSQL_REDMINE_USER=redmine
+MYSQL_REDMINE_PASSWORD=redmine1324
+MYSQL_DATABASE=redmine
