--- a/.env
+++ b/.env
@@ -1,14 +1,15 @@
 # 레드마인에 파일 업로드 했을 때 저장될 Host OS의 디렉터리
-REDMINE_FILES_DIR_PATH=~/docker-redmine/redmine/files
+REDMINE_FILES_DIR_PATH=./redmine/files
 # 레드마인에 플러그인들이 저장될 Host OS의 디렉터리
-REDMINE_PLUGINS_DIR_PATH=~/docker-redmine/redmine/plugins
+REDMINE_PLUGINS_DIR_PATH=./redmine/plugins
 # 레드마인에 테마들이 저장될 Host OS의 디렉터리
-REDMINE_THEMES_DIR_PATH=~/docker-redmine/redmine/themes
+REDMINE_THEMES_DIR_PATH=./redmine/themes
 
-# 레드마인 서비스의 정보를 담을 mariaDB의 데이터들이 저장될 Host OS의 디렉터리(절대 경로로 지정)
-MARIADB_STORAGE_DIR_PATH=~/docker-redmine/mariadb/data
-MARIADB_CONFD_DIR_PATH=~/docker-redmine/mariadb/conf.d
-MARIADB_LOG_DIR_PATH=~/docker-redmine/mariadb/log
+# 레드마인 서비스의 정보를 담을 mariaDB의 데이터들이 저장될 Host OS의 디렉터리
+MARIADB_STORAGE_DIR_PATH=./mariadb/data
+# mariadb 설정을 담은 Host OS의 디렉터리
+MARIADB_CONFD_DIR_PATH=./mariadb/conf
+
 # mariaDB의 root 계정의 패스워드
 MYSQL_ROOT_PASSWORD=root1324
 MYSQL_REDMINE_USER=redmine
