mount volume for mariadb log directory

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ REDMINE_THEMES_DIR_PATH=./redmine/themes
 MARIADB_STORAGE_DIR_PATH=./mariadb/data
 # mariadb 설정을 담은 Host OS의 디렉터리
 MARIADB_CONFD_DIR_PATH=./mariadb/conf
+MARIADB_LOG_DIR_PATH=./mariadb/log
 
 # mariaDB의 root 계정의 패스워드
 MYSQL_ROOT_PASSWORD=root1324
