--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     volumes:
       - ${MARIADB_STORAGE_DIR_PATH}:/var/lib/mysql
       - ${MARIADB_CONFD_DIR_PATH}:/etc/mysql
+      - ${MARIADB_LOG_DIR_PATH}:/var/log/mysql
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
